added updatePassword
